# kite-xmpp-bot

./: CMakeLists.txt  README.md  package.json
app/: config.js  index.js
app/responders/staticfiles/: nonworkinghours.txt  responder.js  workinghours.txt
app/utils/: logger.js
app/xmpp/: client.js  kite.js
app/xmpp/modules/: ping.js
app/xmpp/utils/: ExtendElement.js  route.js
